ゲームの形が見えた(解放処理もok)

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,25 +1,45 @@
 [Window][Debug##Default]
-Pos=817,273
-Size=440,401
-Collapsed=0
-
-[Window][Dear ImGui Demo]
-Pos=772,0
-Size=550,680
-Collapsed=1
-
-[Window][Imgui]
 Pos=60,60
-Size=260,140
+Size=400,400
 Collapsed=0
 
-[Window][TestModel]
-Pos=-2,31
-Size=305,198
+[Window][player]
+Pos=60,60
+Size=103,100
 Collapsed=0
 
 [Window][camera]
-Pos=929,36
-Size=331,153
+Pos=60,60
+Size=145,100
+Collapsed=0
+
+[Window][enemy]
+Pos=1058,461
+Size=103,100
+Collapsed=0
+
+[Window][SpringEnemy]
+Pos=1040,300
+Size=114,94
+Collapsed=0
+
+[Window][Key Status]
+Pos=61,242
+Size=81,191
+Collapsed=0
+
+[Window][Door Status]
+Pos=1034,140
+Size=177,94
+Collapsed=0
+
+[Window][Player State]
+Pos=1031,27
+Size=163,71
+Collapsed=0
+
+[Window][Restart]
+Pos=60,60
+Size=32,35
 Collapsed=0
 
