--- a/CG2_00_01.vcxproj
+++ b/CG2_00_01.vcxproj
@@ -155,6 +155,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="GameProgram\Stage\MapChip.cpp" />
     <ClCompile Include="GameProgram\Stage\MapLoader.cpp" />
     <ClCompile Include="GameProgram\Stage\StageManager.cpp" />
+    <ClCompile Include="LoadingScene.cpp" />
     <ClCompile Include="Minimap.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -211,6 +212,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="GameProgram\Stage\MapChip.h" />
     <ClInclude Include="GameProgram\Stage\MapLoader.h" />
     <ClInclude Include="GameProgram\Stage\StageManager.h" />
+    <ClInclude Include="LoadingScene.h" />
     <ClInclude Include="Minimap.h" />
   </ItemGroup>
   <ItemGroup>
