--- a/CG2_00_01.vcxproj.filters
+++ b/CG2_00_01.vcxproj.filters
@@ -204,6 +204,9 @@
     <ClCompile Include="Minimap.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="LoadingScene.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\2d\Sprite.h">
@@ -366,6 +369,9 @@
       <Filter>ソース ファイル\GameProgram</Filter>
     </ClInclude>
     <ClInclude Include="Minimap.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="LoadingScene.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
