ファイル整理

--- a/CG2_00_01.vcxproj
+++ b/CG2_00_01.vcxproj
@@ -110,6 +110,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Engine\base\DirectXCommon.cpp" />
     <ClCompile Include="Engine\base\SrvManager.cpp" />
     <ClCompile Include="Engine\Framework.cpp" />
+    <ClCompile Include="Engine\LoadingScene.cpp" />
     <ClCompile Include="Engine\scene\GameManager.cpp" />
     <ClCompile Include="Engine\scene\GameScene.cpp" />
     <ClCompile Include="Engine\input\Input.cpp">
@@ -144,6 +145,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="GameProgram\Enemies\CannonEnemy.cpp" />
     <ClCompile Include="GameProgram\Enemies\Enemy.cpp" />
     <ClCompile Include="GameProgram\Enemies\SpringEnemy.cpp" />
+    <ClCompile Include="GameProgram\Minimap.cpp" />
     <ClCompile Include="GameProgram\Object\Block.cpp" />
     <ClCompile Include="GameProgram\Object\Door.cpp" />
     <ClCompile Include="GameProgram\Object\GhostBlock.cpp" />
@@ -155,8 +157,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="GameProgram\Stage\MapChip.cpp" />
     <ClCompile Include="GameProgram\Stage\MapLoader.cpp" />
     <ClCompile Include="GameProgram\Stage\StageManager.cpp" />
-    <ClCompile Include="LoadingScene.cpp" />
-    <ClCompile Include="Minimap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\2d\ImGuiManager.h" />
@@ -170,6 +170,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Engine\base\DirectXCommon.h" />
     <ClInclude Include="Engine\base\SrvManager.h" />
     <ClInclude Include="Engine\Framework.h" />
+    <ClInclude Include="Engine\LoadingScene.h" />
     <ClInclude Include="Engine\scene\GameManager.h" />
     <ClInclude Include="Engine\scene\GameScene.h" />
     <ClInclude Include="Engine\input\Input.h" />
@@ -201,6 +202,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="GameProgram\Enemies\CannonEnemy.h" />
     <ClInclude Include="GameProgram\Enemies\Enemy.h" />
     <ClInclude Include="GameProgram\Enemies\SpringEnemy.h" />
+    <ClInclude Include="GameProgram\Minimap.h" />
     <ClInclude Include="GameProgram\Object\Block.h" />
     <ClInclude Include="GameProgram\Object\Door.h" />
     <ClInclude Include="GameProgram\Object\GhostBlock.h" />
@@ -212,8 +214,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="GameProgram\Stage\MapChip.h" />
     <ClInclude Include="GameProgram\Stage\MapLoader.h" />
     <ClInclude Include="GameProgram\Stage\StageManager.h" />
-    <ClInclude Include="LoadingScene.h" />
-    <ClInclude Include="Minimap.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="externals\DirectXTex\DirectXTex_Desktop_2022_Win10.vcxproj">
