kamataでやってくれたUI移植,Spriteの種類を途中で帰れるようにした

--- a/CG2_00_01.vcxproj
+++ b/CG2_00_01.vcxproj
@@ -156,6 +156,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="GameProgram\Stage\MapChip.cpp" />
     <ClCompile Include="GameProgram\Stage\MapLoader.cpp" />
     <ClCompile Include="GameProgram\Stage\StageManager.cpp" />
+    <ClCompile Include="GameProgram\UIManager.cpp" />
     <ClCompile Include="MoveTile.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -214,6 +215,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="GameProgram\Stage\MapChip.h" />
     <ClInclude Include="GameProgram\Stage\MapLoader.h" />
     <ClInclude Include="GameProgram\Stage\StageManager.h" />
+    <ClInclude Include="GameProgram\UIManager.h" />
     <ClInclude Include="MoveTile.h" />
   </ItemGroup>
   <ItemGroup>
