--- a/CG2_00_01.vcxproj
+++ b/CG2_00_01.vcxproj
@@ -157,6 +157,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="GameProgram\Stage\MapLoader.cpp" />
     <ClCompile Include="GameProgram\Stage\StageManager.cpp" />
     <ClCompile Include="GameProgram\UIManager.cpp" />
+    <ClCompile Include="LoadingScene.cpp" />
     <ClCompile Include="MoveTile.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -215,6 +216,7 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="GameProgram\Stage\MapLoader.h" />
     <ClInclude Include="GameProgram\Stage\StageManager.h" />
     <ClInclude Include="GameProgram\UIManager.h" />
+    <ClInclude Include="LoadingScene.h" />
     <ClInclude Include="MoveTile.h" />
   </ItemGroup>
   <ItemGroup>
