--- a/CG2_00_01.vcxproj.filters
+++ b/CG2_00_01.vcxproj.filters
@@ -174,6 +174,12 @@
     <ClCompile Include="LoadingScene.cpp">
       <Filter>ソース ファイル\Engine\scene</Filter>
     </ClCompile>
+    <ClCompile Include="GameOverScene.cpp">
+      <Filter>ソース ファイル\Engine\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="GameClearScene.cpp">
+      <Filter>ソース ファイル\Engine\scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\audio\Audio.h">
@@ -345,6 +351,12 @@
       <Filter>ソース ファイル\GameProgram</Filter>
     </ClInclude>
     <ClInclude Include="LoadingScene.h">
+      <Filter>ソース ファイル\Engine\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="GameOverScene.h">
+      <Filter>ソース ファイル\Engine\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="GameClearScene.h">
       <Filter>ソース ファイル\Engine\scene</Filter>
     </ClInclude>
   </ItemGroup>
