--- a/CG2_00_01.vcxproj.filters
+++ b/CG2_00_01.vcxproj.filters
@@ -365,6 +365,7 @@
     <ClInclude Include="StageSelect.h">
       <Filter>ソース ファイル\Engine\scene</Filter>
     </ClInclude>
+    <ClInclude Include="GameData.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="resource\shaders\Object3d.hlsli">
