ドアの回転csvから読み込めるようにした

--- a/imgui.ini
+++ b/imgui.ini
@@ -26,12 +26,12 @@ Collapsed=1
 [Window][Key Status]
 Pos=22,504
 Size=94,180
-Collapsed=1
+Collapsed=0
 
 [Window][Door Status]
-Pos=1084,23
+Pos=939,23
 Size=177,94
-Collapsed=1
+Collapsed=0
 
 [Window][Player State]
 Pos=-1,1
@@ -49,7 +49,12 @@ Size=319,562
 Collapsed=1
 
 [Window][Cannon Enemy]
-Pos=-7,20
+Pos=343,74
 Size=411,210
 Collapsed=1
+
+[Window][Object Rotations]
+Pos=79,48
+Size=315,302
+Collapsed=0
 
