クリエイティブモード追加、imguiでenemies,object配置、移動可能

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=1
 
 [Window][player]
-Pos=539,78
+Pos=628,32
 Size=603,260
 Collapsed=1
 
@@ -24,7 +24,7 @@ Size=230,102
 Collapsed=1
 
 [Window][Key Status]
-Pos=336,455
+Pos=575,317
 Size=191,162
 Collapsed=1
 
@@ -34,7 +34,7 @@ Size=177,94
 Collapsed=1
 
 [Window][Player State]
-Pos=121,494
+Pos=558,441
 Size=464,115
 Collapsed=1
 
@@ -59,7 +59,12 @@ Size=353,341
 Collapsed=1
 
 [Window][Map Object Editor]
-Pos=32,69
-Size=371,260
+Pos=86,33
+Size=371,639
 Collapsed=0
+
+[Window][Enemy Editor]
+Pos=418,72
+Size=254,196
+Collapsed=1
 
