--- a/CG2_00_01.vcxproj
+++ b/CG2_00_01.vcxproj
@@ -139,15 +139,14 @@
     <ClCompile Include="Engine\MyGame.cpp" />
     <ClCompile Include="Engine\scene\TitleScene.cpp" />
     <ClCompile Include="Engine\3d\WorldTransform.cpp" />
-    <ClCompile Include="FadeManager.cpp" />
-    <ClCompile Include="GameClearScene.cpp" />
-    <ClCompile Include="GameOverScene.cpp" />
+    <ClCompile Include="Engine\scene\FadeManager.cpp" />
+    <ClCompile Include="Engine\scene\GameClearScene.cpp" />
+    <ClCompile Include="Engine\scene\GameOverScene.cpp" />
     <ClCompile Include="GameProgram\AABB.cpp" />
     <ClCompile Include="GameProgram\CameraController.cpp" />
     <ClCompile Include="GameProgram\Collision.cpp" />
     <ClCompile Include="GameProgram\Enemies\Bom.cpp" />
     <ClCompile Include="GameProgram\Enemies\CannonEnemy.cpp" />
-    <ClCompile Include="GameProgram\Enemies\Enemy.cpp" />
     <ClCompile Include="GameProgram\Enemies\GhostEnemy.cpp" />
     <ClCompile Include="GameProgram\Enemies\SpringEnemy.cpp" />
     <ClCompile Include="GameProgram\Object\Block.cpp" />
@@ -158,15 +157,14 @@
     <ClCompile Include="GameProgram\Object\SkyDome.cpp" />
     <ClCompile Include="GameProgram\Player\Player.cpp" />
     <ClCompile Include="GameProgram\Stage\EnemyLoader.cpp" />
-    <ClCompile Include="GameProgram\Stage\MapChip.cpp" />
     <ClCompile Include="GameProgram\Stage\MapLoader.cpp" />
     <ClCompile Include="GameProgram\Stage\StageManager.cpp" />
     <ClCompile Include="GameProgram\UIManager.cpp" />
-    <ClCompile Include="LoadingScene.cpp" />
-    <ClCompile Include="MoveTile.cpp" />
-    <ClCompile Include="PerformanceMonitor.cpp" />
-    <ClCompile Include="ResourceManager.cpp" />
-    <ClCompile Include="StageSelect.cpp" />
+    <ClCompile Include="Engine\scene\LoadingScene.cpp" />
+    <ClCompile Include="GameProgram\Object\MoveTile.cpp" />
+    <ClCompile Include="Engine\3d\PerformanceMonitor.cpp" />
+    <ClCompile Include="Engine\3d\ResourceManager.cpp" />
+    <ClCompile Include="Engine\scene\StageSelect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\2d\ImGuiManager.h" />
@@ -205,16 +203,15 @@
     <ClInclude Include="Engine\MyGame.h" />
     <ClInclude Include="Engine\scene\TitleScene.h" />
     <ClInclude Include="Engine\3d\WorldTransform.h" />
-    <ClInclude Include="FadeManager.h" />
-    <ClInclude Include="GameClearScene.h" />
-    <ClInclude Include="GameData.h" />
-    <ClInclude Include="GameOverScene.h" />
+    <ClInclude Include="Engine\scene\FadeManager.h" />
+    <ClInclude Include="Engine\scene\GameClearScene.h" />
+    <ClInclude Include="GameProgram\GameData.h" />
+    <ClInclude Include="Engine\scene\GameOverScene.h" />
     <ClInclude Include="GameProgram\AABB.h" />
     <ClInclude Include="GameProgram\CameraController.h" />
     <ClInclude Include="GameProgram\Collision.h" />
     <ClInclude Include="GameProgram\Enemies\Bom.h" />
     <ClInclude Include="GameProgram\Enemies\CannonEnemy.h" />
-    <ClInclude Include="GameProgram\Enemies\Enemy.h" />
     <ClInclude Include="GameProgram\Enemies\GhostEnemy.h" />
     <ClInclude Include="GameProgram\Enemies\GhostColor.h" />
     <ClInclude Include="GameProgram\Enemies\SpringEnemy.h" />
@@ -226,15 +223,14 @@
     <ClInclude Include="GameProgram\Object\SkyDome.h" />
     <ClInclude Include="GameProgram\Player\Player.h" />
     <ClInclude Include="GameProgram\Stage\EnemyLoader.h" />
-    <ClInclude Include="GameProgram\Stage\MapChip.h" />
     <ClInclude Include="GameProgram\Stage\MapLoader.h" />
     <ClInclude Include="GameProgram\Stage\StageManager.h" />
     <ClInclude Include="GameProgram\UIManager.h" />
-    <ClInclude Include="LoadingScene.h" />
-    <ClInclude Include="MoveTile.h" />
-    <ClInclude Include="PerformanceMonitor.h" />
-    <ClInclude Include="ResourceManager.h" />
-    <ClInclude Include="StageSelect.h" />
+    <ClInclude Include="Engine\scene\LoadingScene.h" />
+    <ClInclude Include="GameProgram\Object\MoveTile.h" />
+    <ClInclude Include="Engine\3d\PerformanceMonitor.h" />
+    <ClInclude Include="Engine\3d\ResourceManager.h" />
+    <ClInclude Include="Engine\scene\StageSelect.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="externals\DirectXTex\DirectXTex_Desktop_2022_Win10.vcxproj">
